Fix: Home Page Product Highlights Section Mobile

--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -5726,7 +5726,7 @@
     text-align: center;
     border-radius: 1000px;
     line-height: 21px;
-    margin-top: 20px !important;
+    margin-top: 15px !important;
   }
 
   .video-carousel {
@@ -8316,3 +8316,7 @@
 }
 
 
+
+.slick-list.draggable {
+  padding-bottom: 7rem;
+}
